# llm-inference-server

./: .env-sample  .gitignore  CODEOWNERS  LICENSE  Makefile  README.md  TECHNICAL_DOCUMENTATION.md  TESTING.md  flow.mermaid  main.py  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
api/: routes.py  server.py
engine/: generator.py  model_loader.py
logger/: logger.py
metrics/: metrics.py
scheduler/: batch_scheduler.py  continuous_scheduler.py  request.py  request_queue.py
schemas/: __init__.py  schemas.py
settings/: config.yaml  settings.py
streaming/: stream_manager.py
tests/: __init__.py  conftest.py  test_integration.py  test_latency.py  test_unit.py
tokenizer/: tokenizer_service.py
unused_code/: batch_scheduler.py  sse.py
utils/: __init__.py  utils.py
