[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-inference-server"
version = "0.1.0"
description = "High-performance LLM inference server with continuous scheduling and dynamic batching"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "uvicorn>=0.24.0",
    "sse-starlette>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pylint>=2.17.0",
    "flake8>=6.0.0",
    "psutil>=5.9.0",
]

[tool.setuptools]
packages = [
    "api",
    "engine",
    "logger",
    "scheduler",
    "schemas",
    "settings",
    "streaming",
    "tokenizer",
]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]
